deksttop size complat

--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
                 <li><a href="#">Products</a></li>
                 <li><a href="#">Sing Up</a></li>
                 <li><a href="#">Log In</a></li>
-                <li><a href="#"><i class="fa-duotone fa-magnifying-glass"></i></a></li>
-                <li><a href="#"><i class="fa-regular fa-cart-shopping"></i></a></li>
+                <li><a href="#"><i class="fa-solid fa-magnifying-glass"></i></a></li>
+                <li><a href="#"><i class="fa-solid fa-cart-shopping"></i></a></li>
             </ul>
         </nav>
 
@@ -40,7 +40,7 @@
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sem <br>vestibulum sed scelerisque eros.
                     Lectus faucibus.</p>
                 <br>
-                <button class="btn">Preebook now <i class="fa-sharp fa-light fa-arrow-right"></i></button>
+                <button class="btn">Preebook now <i class="fa-solid fa-arrow-right"></i></button>
             </div>
             <div class="banner-img">
                 <img src="./images/main-camera.png" alt="">
@@ -57,9 +57,154 @@
         </section>
     </header>
     <main>
-        <!--  -->
+        <!-- main section start -->
+        <h2 class="sub-title">Popular Collection</h2>
+
+       <section class="container">
+        <div class="box">
+            <div class="img-box">
+                <img src="./images/tripod.png" alt="">
+            </div>
+                <h2 class="pro-title">Flex Tripod</h2>
+                <p class="price">$50.48</p>
+                <div><i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                </div>
+                <p class="pro-description">Wordwide shifting <br> available <br>
+                    Buyers protection possible!</p>
+        </div>
+        <div class="box">
+            <div class="img-box">
+                <img src="./images/action.png" alt="">
+            </div>
+                <h2 class="pro-title">Flex Tripod</h2>
+                <p class="price">$50.48</p>
+                <div><i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                </div>
+                <p class="pro-description">Wordwide shifting <br> available <br>
+                    Buyers protection possible!</p>
+        </div>
+        <div class="box">
+            <div class="img-box">
+                <img src="./images/camera.png" alt="">
+            </div>
+                <h2 class="pro-title">Flex Tripod</h2>
+                <p class="price">$50.48</p>
+                <div><i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                </div>
+                <p class="pro-description">Wordwide shifting <br> available <br>
+                    Buyers protection possible!</p>
+        </div>
+        <div class="box">
+            <div class="img-box">
+                <img src="./images/drone.png" alt="">
+            </div>
+                <h2 class="pro-title">Flex Tripod</h2>
+                <p class="price">$50.48</p>
+                <div><i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                </div>
+                <p class="pro-description">Wordwide shifting <br> available <br>
+                    Buyers protection possible!</p>
+        </div>
+        <div class="box">
+            <div class="img-box">
+                <img src="./images/gear.png" alt="">
+            </div>
+                <h2 class="pro-title">Flex Tripod</h2>
+                <p class="price">$50.48</p>
+                <div><i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                </div>
+                <p class="pro-description">Wordwide shifting <br> available <br>
+                    Buyers protection possible!</p>
+        </div>
+        <div class="box">
+            <div class="img-box">
+                <img src="./images/lights.png" alt="">
+            </div>
+                <h2 class="pro-title">Flex Tripod</h2>
+                <p class="price">$50.48</p>
+                <div><i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                </div>
+                <p class="pro-description">Wordwide shifting <br> available <br>
+                    Buyers protection possible!</p>
+        </div>
+        <div class="box">
+            <div class="img-box">
+                <img src="./images/mic.png" alt="">
+            </div>
+                <h2 class="pro-title">Flex Tripod</h2>
+                <p class="price">$50.48</p>
+                <div><i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                </div>
+                <p class="pro-description">Wordwide shifting <br> available <br>
+                    Buyers protection possible!</p>
+        </div>
+        <div class="box">
+            <div class="img-box">
+                <img src="./images/setup.png" alt="">
+            </div>
+                <h2 class="pro-title">Flex Tripod</h2>
+                <p class="price">$50.48</p>
+                <div><i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                </div>
+                <p class="pro-description">Wordwide shifting <br> available <br>
+                    Buyers protection possible!</p>
+        </div>
+        <div class="box">
+            <div class="img-box">
+                <img src="./images/single-light.png" alt="">
+            </div>
+                <h2 class="pro-title">Flex Tripod</h2>
+                <p class="price">$50.48</p>
+                <div><i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                </div>
+                <p class="pro-description">Wordwide shifting <br> available <br>
+                    Buyers protection possible!</p>
+        </div>
+
+        <button class="btn see-btn">See More <i class="fa-solid fa-arrow-right"></i></button>
+       </section>
     </main>
-    <footer></footer>
+
+    <!-- footer section -->
+    <footer>
+        <h2>Influencer products</h2>
+        <p>Copyright © 2020  influencer products <br>
+            All rights reserved
+        </p>
+        <div>
+            <i class="fa-brands fa-instagram"></i>
+            <i class="fa-brands fa-youtube"></i>
+            <i class="fa-brands fa-facebook"></i>
+            <i class="fa-brands fa-square-twitter"></i>
+        </div>
+    </footer>
 </body>
 
 </html>
