ki jeno jhamela hoise

--- a/index.html
+++ b/index.html
@@ -60,6 +60,7 @@
         <!-- main section start -->
         <h2 class="sub-title">Popular Collection</h2>
 
+        <!-- image section start -->
        <section class="container">
         <div class="box">
             <div class="img-box">
@@ -190,6 +191,22 @@
 
         <button class="btn see-btn">See More <i class="fa-solid fa-arrow-right"></i></button>
        </section>
+
+       <!-- featured section start -->
+       <section class="featur-container">
+        <div class="feature-img">
+            <img src="./images/gear.png" alt="">
+        </div>
+        <div class="feature-content">
+            <h1>Featured products at one place</h1>
+            <br>
+            <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor  do amet sint. Velit officia consequat duis enim velit mollit.Exercitation veniam consequat sunt nostrud amet.</p>
+            <br><br>
+            <button class="btn">Join now <i class="fa-solid fa-arrow-right"></i></button>
+            
+        </div>
+       </section>
+
     </main>
 
     <!-- footer section -->
